--- a/css/style.css
+++ b/css/style.css
@@ -14,35 +14,26 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-#balance {
-    margin-bottom: 10px;
-}
-
-#table-container {
-    margin-bottom: 20px;
-}
-
-#expense-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-#expense-table th, #expense-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-}
-
-#form-container {
-    display: flex;
-    gap: 10px;
-}
-
-button {
-    padding: 8px;
-    cursor: pointer;
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-}
+.test-element {
+    height: 100px;
+    background-color: black;
+    width: 100px;
+    z-index: 5;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    color: white;
+    text-align: center;
+    -ms-touch-action: none;
+  }
+  
+  .test-element:nth-child(2) {
+    top: 150px;
+    left: 150px;
+  }
+  
+  .test-element:nth-child(3) {
+    top: 50px;
+    left: 100px;
+  }
+  
