--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ body {
     -ms-touch-action: none;
   }
   
+
+
   .test-element:nth-child(2) {
     top: 150px;
     left: 150px;
@@ -36,4 +38,12 @@ body {
     top: 50px;
     left: 100px;
   }
-  
+
+  .section {
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: #f0f0f0;
+    border-bottom: 1px solid #ccc;
+}
